--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
         <li>bricks</li>
         <li>mortar</li>
     </div>
+
+    <module-one>
+            <div>my awsome changes about module 1</div>
+    </module-one>
 </body>
 </html>
